create cards screen

--- a/lib/flash_cards_web/live/deck_live/show.html.heex
+++ b/lib/flash_cards_web/live/deck_live/show.html.heex
@@ -2,6 +2,9 @@
   Deck {@deck.id}
   <:subtitle>This is a deck record from your database.</:subtitle>
   <:actions>
+    <.link patch={~p"/decks/#{@deck}/cards"} phx-click={JS.push_focus()}>
+      <.button>Cards</.button>
+    </.link>
     <.link patch={~p"/decks/#{@deck}/show/edit"} phx-click={JS.push_focus()}>
       <.button>Edit deck</.button>
     </.link>
